--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@ h1 {
 
 /* Flex Child */
 .flex-child {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 125px;
   height: 300px;
   color: #fff;
