--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,13 @@ h1 {
   font-size: 0.6em;
 }
 
+ /*CSS to hide input spinner*/
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 /* Flex Controls Section */
 .flex-controls {
   display: flex;
