--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 200px;
   color: #fff;
   background-color: #000;
   margin: 2.5px;
