--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,7 +3,7 @@ header {
   align-items: center;
   padding: 15px;
   background-color: #2E5266;
-  border-bottom: 3px solid #ED6A5A;
+  border-bottom: 4px solid #F9A03F;
   color: #DBE9EE;
 }
 
@@ -12,7 +12,7 @@ h1 {
   align-items: center;
   margin: 0 auto 0 0;
   font-family: 'Finger Paint', sans-serif;
-  text-shadow: -1px -1px 1px #C0D6DF;
+  text-shadow: -1px -1px 0px #C0D6DF;
 }
 
 .header-icon {
@@ -24,18 +24,19 @@ h1 {
 
 .btn {
   background-color: transparent;
-  border: 2px solid #DBE9EE;
+  border: 1px solid #DBE9EE;
   border-radius: 20px;
   color: #DBE9EE;
   padding: 8px 10px;
   margin: 0 8px;
   cursor: pointer;
+  font-size: .75em;
   width: 90px;
   transition: all .25s;
 }
 
 .btn:hover {
-  background-color: #ED6A5A;
-  border: 2px solid #ED6A5A;
+  background-color: #F9A03F;
+  border: 1px solid #F9A03F;
   color: #fff;
 }
