--- a/src/components/showCode.css
+++ b/src/components/showCode.css
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   width: 90%;
-  height: 90%;
+  height: 85%;
   max-width: 800px;
   max-height: 580px;
   margin: 0 auto;
@@ -31,8 +31,16 @@
 
 .code-wrapper {
   display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
+}
+
+.toggle--btn {
+  float: right;
+  margin-top: 15px;
+  font-size: 1em;
+  font-weight: bold;
 }
 
 code {
