--- a/src/components/showCode.css
+++ b/src/components/showCode.css
@@ -19,11 +19,8 @@
 
 .html-div,
 .css-div {
-  width: 48%;
-  height: 80%;
-  max-width: 340px;
-  margin: 10px;
-  padding: 5px;
+  margin: 10px 25px;
+  padding: 10px;
   border: 1px solid white;
   border-radius: 10px;
   font-size: 1.2em;
@@ -31,10 +28,15 @@
 
 .code-wrapper {
   display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
 }
 
-code {
-  color: chartreuse;
+.toggle--btn {
+  float: right;
+  margin-top: 10px;
+}
+
+pre, code {
+    white-space: pre-line;
 }
