Add dropdown legend feature for flex child to show flex child properties.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
 @import './FlexParent.css';
 @import './FlexItems.css';
 @import './FlexControls.css';
+@import './Legend.css';
 @import './Footer.css';
 @import url('https://fonts.googleapis.com/css?family=Finger+Paint');
 
