alter margin & padding to various elements

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   align-items: center;
-  padding: 15px;
+  padding: 10px 5px;
   background-color: #2E5266;
   border-bottom: 4px solid #F9A03F;
   color: #DBE9EE;
